# rnaseq_workflow

./: .gitignore  README.md  pyproject.toml
comparison_results_archive/e5fd308f-b699-4343-9402-0d0084072141/: README.md
config/: example_cli.yaml
docker/: Dockerfile.sra-tools  Dockerfile.tools  proxy.env.example
docs/: module_system_design.md
docs/development/: development_boundaries.md  docker_proxy_notes.md  legacy_core_features.md  phase_preview.md  sra_metadata_grouping_notes.md  trim_galore_stage_notes.md  trimmed_fastqc_stage_notes.md
docs/thesis/: chapter3_system_requirements_and_design.md
modules/alignment/: README.md
modules/common/: README.md
modules/data_ingestion/: README.md
modules/download/: README.md
modules/execution/: README.md
modules/quality_control/: README.md
modules/quantification/: README.md
modules/read_trimming/: README.md
modules/reference/: README.md
modules/reporting/: README.md
modules/ui/: README.md
old_prj/: description.md
old_prj/RNAseq_Pipeline2.1/: environment.yml  main.py  progress_tui.py
references/demo_reference/: reference.json
references/sarscov2_refseq_nc045512/: reference.json
references/soybean_ensembl_current/: reference.json
requirements/: base.txt
scripts/: build_sra_tools_image.ps1  build_tools_image.ps1  container_full_rebuild.ps1  container_incremental_rebuild.ps1  container_restart.ps1  container_start.ps1  container_status.ps1  container_stop.ps1  docker_common.ps1  run_sra_tools.ps1  run_tools.ps1  start_ui.ps1
task_description/: ai_research.md  task1.md
(+153 files in other folders)
